# TrendRadar

./: README-Cherry-Studio.md  README-EN.md  README-MCP-FAQ-EN.md  README-MCP-FAQ.md  README.md  index.html  main.py  pyproject.toml  readme.md  requirements.txt  setup-windows-en.bat  setup-windows.bat  start-http.bat  start-http.sh
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  03-config-help.yml
.github/workflows/: crawler.yml  docker.yml
config/: config.yaml
docker/: .env  Dockerfile  Dockerfile.mcp  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  manage.py
mcp_server/: __init__.py  server.py
mcp_server/services/: data_service.py  parser_service.py
mcp_server/tools/: analytics.py  data_query.py  search_tools.py  system.py
mcp_server/utils/: date_parser.py  validators.py
output/2025年10月15日/html/: 14时24分.html  14时32分.html  14时42分.html  14时47分.html  15时12分.html  16时16分.html  17时13分.html  18时13分.html  19时10分.html  20时24分.html  21时26分.html  22时12分.html  23时12分.html  当日汇总.html
output/2025年10月15日/txt/: 14时32分.txt  14时42分.txt  14时47分.txt  15时12分.txt  16时16分.txt  17时13分.txt  19时10分.txt  20时24分.txt  21时26分.txt  22时12分.txt  23时12分.txt
output/2025年10月16日/html/: 00时12分.html  01时10分.html  02时17分.html  03时09分.html  04时13分.html  05时10分.html  06时09分.html  07时10分.html  08时53分.html  10时20分.html  11时31分.html  12时13分.html  (+12 more)
trendradar/: __init__.py  __main__.py  context.py
trendradar/core/: analyzer.py  data.py
trendradar/notification/: renderer.py  senders.py
trendradar/storage/: base.py  local.py  manager.py  remote.py
trendradar/utils/: __init__.py
(+1617 files in other folders)
