[project]
name = "trendradar-mcp"
version = "1.0.0"
description = "TrendRadar MCP Server - 新闻热点聚合工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "pytz>=2025.2",
    "PyYAML>=6.0.3",
    "fastmcp>=2.12.0",
    "websockets>=13.0,<14.0",
]

[project.scripts]
trendradar = "mcp_server.server:run_server"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
